# intercept37

./: .gitignore  README.md  pyproject.toml  test_c2.py  test_c2_v2.py  test_c2_v3.py  test_c2_v4.py
breach37/: README.md  pyproject.toml
breach37/breach37/: __init__.py  cli.py  engine.py
c2-37/: README.md  pyproject.toml
c2-37/c2_37/: __init__.py  cli.py  crypto.py  dns.py  etw_amsi.py  evasion.py  implant.py  profiles.py  sandbox.py  server.py
c2-37/tests/: test_c2.py  test_c2_v2.py  test_c2_v3.py  test_c2_v4.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  Layout.tsx  RequestInspector.tsx  StatusBadge.tsx
frontend/src/hooks/: useAgentChat.ts  useApi.ts  useWebSocket.ts
frontend/src/pages/: Agent.tsx  Dashboard.tsx  Repeater.tsx  Scanner.tsx  Traffic.tsx
frontend/src/types/: index.ts
intercept37/: README.md  __init__.py  cli.py  models.py  pyproject.toml
intercept37/agent/: tools.py
intercept37/api/: chat_routes.py  scanner_routes.py  server.py
intercept37/brute/: __init__.py  cli.py  engine.py  presets.py
intercept37/c2/: c2-37-walkthrough.yaml  cli.py  dashboard.py  implant.py  modules.py  payloads.py  pivot.py  redirector.py  server.py
intercept37/frontend/: index.html  tailwind.config.js  vite.config.ts
intercept37/frontend/src/: App.css  App.tsx
intercept37/frontend/src/api/: client.ts
intercept37/frontend/src/components/: Layout.tsx
intercept37/intercept37/: db.py
intercept37/intercept37/agent/: __init__.py  chat.py
intercept37/intercept37/api/: llm_routes.py  server.py
intercept37/intercept37/llm/: __init__.py  analyzer.py
intercept37/intercept37/scanner/: __init__.py
intercept37/llm/: prompts.py
intercept37/postexploit/: __init__.py  checks.py  cli.py  engine.py
intercept37/proxy/: engine.py
intercept37/scanner/: engine.py
intercept37/shells/: __init__.py  cli.py  engine.py  payloads.py
probe37/: __init__.py  cli.py  db.py  models.py
probe37/api/: server.py
probe37/proxy/: engine.py
recon37/: README.md  pyproject.toml
recon37/recon37/: __init__.py  cli.py  engine.py
venom37/: README.md  pyproject.toml
venom37/venom37/: __init__.py  bind_shells.py  cli.py  engine.py  obfuscate.py  shellcode.py  weaponize.py
