[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intercept37"
version = "0.1.0"
description = "Open-source intercepting proxy & pentest suite — built for humans and LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mitmproxy>=10.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
intercept37 = "intercept37.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
