[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "breach37"
version = "0.1.0"
description = "Async HTTP form brute forcer — presets for WordPress, Jenkins, Drupal, and custom forms"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
breach37 = "breach37.cli:breach_cli"

[tool.ruff]
target-version = "py311"
line-length = 100
