[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c2-37"
version = "0.1.0"
description = "Lightweight C2 framework — zero dependencies, stdlib-only Python"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
c37 = "c2_37.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
