[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "recon37"
version = "0.1.0"
description = "Post-exploitation enumerator — SUID, creds, privesc via webshell, SSH, or local"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
recon37 = "recon37.cli:recon_cli"

[tool.ruff]
target-version = "py311"
line-length = 100
