[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "venom37"
version = "0.1.0"
description = "Reverse shell generator — 16 shell types, encoding, WordPress injection, listener commands"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.0",
]

[project.scripts]
venom37 = "venom37.cli:venom_cli"

[tool.ruff]
target-version = "py311"
line-length = 100
